envoy/envoy-gateway.yaml
# Based on: https://github.com/envoyproxy/envoy/tree/main/examples/front-proxy
# Modification by Instana: add tracing configuration for libinstana_sensor.so
static_resources:

  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: server_app
              domains:
              - "*"
              routes:
              - match:
                  prefix: ""
                route:
                  cluster: server_app
          http_filters:
          - name: envoy.filters.http.router
          tracing:
            provider:
              name: envoy.tracers.dynamic_ot
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.DynamicOtConfig
                library: /opt/envoy/libcxx-libinstana_sensor.so
                config:
                  service: envoy-front-proxy

  clusters:
  - name: server_app
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: server_app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server-app
                port_value: 8000

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
